media-stack/overseerr/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: media-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod # Specify your ClusterIssuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Automatically redirect HTTP to HTTPS

spec:
  rules:
    - host: overseerr.rke # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr-service
                port:
                  number: 5055
    - host: overseerr.diggingin.pw # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr-service
                port:
                  number: 5055
  tls:
    - hosts:
        - overseerr.diggingin.pw # Replace with your domain
        - overseerr.rke
      secretName: overseerr-tls # This is the name of the TLS certificate secret
